# study_faust

./: README.md
stu_faust/: CMakeLists.txt  main.cpp
stu_faust/cmake/misc/: llvm.cmake
stu_faust/compiler/: main.cpp
stu_faust/compiler/generator/llvm/: llvm_code_container.cpp  llvm_dsp_aux.hh  llvm_dynamic_dsp_aux.cpp  llvm_instructions.hh
stu_faust/compiler/utils/: TMutex.h
